--- a/css/index.css
+++ b/css/index.css
@@ -98,16 +98,13 @@ body {
     width: 100%;
 }
 .content-tab-main {
-    position: relative;
     width: 100%;
     display: flex;
-    height: 7rem;
-    padding: 1.5rem;
+    padding: 1rem;
     flex-direction: row;
     justify-content: center;
     z-index: 999;
     background-color: rgba(255, 255, 255, 0.04);
-    /*background-image: url("../images/line.png");*/
     background-size: cover;
     background-repeat: repeat;
     border-radius: 1px;
@@ -127,13 +124,15 @@ body {
     width: 100%;
     color: #fdeb8b;
     padding: 10px 0;
+    height: 4rem;
     font-size: 3rem;
+    line-height: 4rem;
     font-family: electronicFont;
-    justify-content: center
+    justify-content: center;
 }
 .tab-text {
     color: #ffffff;
-    margin-top: 5px;
+    margin-top: 10px;
 }
 .content-tab-card span {
     color: #3f95f1;
@@ -165,7 +164,7 @@ body {
     position: relative;
     z-index: 9999;
     width: 100%;
-    max-width: 34rem;
+    max-width: 32rem;
     padding: 1.5rem 2rem;
     height: 100%;
     background-color: rgba(15, 33, 89 ,0.7);
