--- a/css/index.css
+++ b/css/index.css
@@ -31,7 +31,7 @@ body {
 }
 .main-header {
     width: 100%;
-    height: 0.9rem;
+    min-height: 0.7rem;
     display: flex;
     background-image: url("../images/head_bg.png");
     background-repeat: no-repeat;
