--- a/css/index.css
+++ b/css/index.css
@@ -106,6 +106,7 @@ body {
     padding: 0.1rem;
     flex-direction: row;
     justify-content: center;
+    margin-bottom: 20px;
     z-index: 999;
     background-color: rgba(255, 255, 255, 0.04);
     background-size: cover;
@@ -168,7 +169,7 @@ body {
 .tab-list-action {
     position: relative;
     z-index: 9999;
-    width: 100%;
+    width: 80%;
     padding: 0.2rem 0.2rem;
     height: 100%;
     background-color: rgba(15, 33, 89 ,0.7);
@@ -367,4 +368,7 @@ body {
     100% {
         transform: rotate(-360deg);
     }
+}
+.anchorBL {
+    display: none;
 }
