--- a/css/index.css
+++ b/css/index.css
@@ -179,7 +179,7 @@ body {
 .tab-list-action {
     position: relative;
     z-index: 9999;
-    width: 80%;
+    width: 50%;
     padding: 0.2rem 0.2rem;
     height: 100%;
     background-color: rgba(15, 33, 89 ,0.7);
@@ -248,7 +248,8 @@ body {
     white-space: nowrap;
     color: #ffffff;
     width: 100%;
-    justify-content: center;
+    justify-content: flex-start;
+    padding-left: .1rem;
     z-index: 999;
 }
 .left {
